# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  linter_test.yml
gendiff/: __init__.py  comparator.py  gendiff.py  parser.py  stylish.py  types.py
gendiff/formatters/: format.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: error.txt  file1.yml  plain_result.txt  result_json.json  result_json.py  result_json.txt  result_stylish.py
